# 2025-p2-ajsmith19

./: README.md  pyproject.toml
tests/: base.py
todo/: __init__.py
todo/models/: todo.py
todo/views/: routes.py
